add hook description for website

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: mypy
   name: mypy
-  description: ''
+  description: run mypy from your environment, properly detecting imports and types
   entry: pre-commit-mypy-wrapper
   language: python
   types_or: [python, pyi]
